--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@vercel/kv": "^3.0.0",
+    "autoprefixer": "^10.4.21",
     "geist": "^1.4.2",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "postcss": "^8.5.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss-animate": "^1.0.7"
@@ -25,7 +27,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5"
   }
 }
